--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 * This file contains the CSS for index.html
 */
 
-
 .mdl-ripple {
   background: #000;
   opacity: 0.001;
@@ -12,7 +11,7 @@
 .mdl-layout__header-row {
   justify-content: center;
   padding: 0;
-  color: rgb(255, 255, 255);
+  color: rgb(248, 248, 248);
 }
 
 .mdl-layout__content {
@@ -21,21 +20,26 @@
   padding-top: 20pt;
 }
 
+.mdl-layout__left {
+  padding-right: 600pt;
+  padding-top: 20pt;
+  font-size: 1.5rem;
+}
+
 .mdl-textfield__error {
   color: #fff;
 }
 
 .page-content {
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   font-family: Helvetica, Arial, sans-serif;
   font-size: 1.5rem;
 }
 
 body {
-  background-color: rgba(201, 47, 91, 0.801);
+  background-color: rgba(199, 64, 154, 0.73);
 }
 
 img {
   float: right;
-  margin-top: -10%;
 }
